Switch over to OpenAPI