@@ -4,6 +4,7 @@ plugins {
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.beryx.jlink' version '3.0.1'
+    id 'org.hidetake.swagger.generator' version '2.19.2'
 }
 
 group 'io.github'
@@ -17,8 +18,8 @@ ext {
     junitVersion = '5.10.1'
 }
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
+sourceCompatibility = '20'
+targetCompatibility = '20'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -30,14 +31,24 @@ application {
 }
 
 javafx {
-    version = '17.0.6'
+    version = '20.0.2'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
-
+    swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.47'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+}
+
+swaggerSources {
+    netzplan {
+        inputFile = file('netzplan.yaml')
+        code {
+            language = 'java'
+            jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
+        }
+    }
 }
 
 test {
@@ -55,3 +66,5 @@ jlink {
 jlinkZip {
     group = 'distribution'
 }
+
+build.dependsOn generateSwaggerCode
